--- a/index.html
+++ b/index.html
@@ -3,11 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <title>OnePage</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <img class="logo" src="img/image 1.svg" alt="">
+        <ul class="informacoes">
+            <li><a href="https://www.fiesp.com.br/">FIESP</a></li>
+            <li><a href="https://www.sesisp.org.br/">SESI</a></li>
+            <li><a href="https://www.sp.senai.br/">SENAI</a></li>
+            <li><a href=""><img src="img/twitter 1.png" alt=""></a></li>
+            <li><a href=""><img src="img/linkedin 1.png" alt=""></a></li>
+            <li><a href=""><img src="img/facebook 1.png" alt=""></a></li>
+            <li><a href=""><img src="img/youtube (1) 1.png" alt=""></a></li>
+        </ul>
+        <h1>BIBLIOTECA</h1>
+        <ul class="atalhos">
+            <li><a href="">HOME</a></li>
+            <li><a href="">LIVROS</a></li>
+            <li><a href="">EVENTOS</a></li>
+            <li><a href="">SOBRE</a></li>
+        </ul>
+    </header>
+    <main>
+        <section class="primeira">
+        <img class="imgFundo" src="img/open-book-1428428_1920 1.jpg" alt="">
+        <h2 class="titulo">ENTRE PARA A NOSSA </h2>
+        <h2 class="subTitulo">REDE DE LEITORES!</h2>
+        </section>
+        <section class="segunda">
+            <h1>EVENTOS</h1>
+        </section>
+        <section class="terceira">
+
+        </section>
+        <section class="quarta">
+            <h1>COLEÇÃO</h1>
+            <ul>
+                <li>
+                    <a href="">LIVROS TÉCNICOS <img src="img/icon.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="">LIVROS LITERÁRIOS <img src="img/icon.png" alt=""></a>
+                </li>
+            </ul>
+            <img src="img/imagemLivro.png" alt="">
+        </section>
+        <section class="quinta"> 
+            <ul class="funcionamento">
+                <li>Horário de funcionamento :</li>
+                <li>segunda - sextas</li>
+                <li>7:30 ás 13: 00 e 14:00 ás 16:30 h.</li>
+            </ul>
+            <ul class="contato">
+                <li>Entre em contato :</li>
+                <li>47724805 - Número de telefone fixo, e</li>
+                <li>para mensagens de Whatsapp</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <img class="imgFooter" src="img/footer.png" alt="">
+        <h2 class="textoFooter">Escola Senai "Profº. Vicente Amato"
+            Rua Elton Silva, 905 - Centro - Jandira/SP - CEP 06600-025
+            Telefone: (11) 4772-4700 |
+            E-mail:senaijandira@sp.senai.br</h2>
+    </footer>
 </body>
 </html>
