--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <title>OnePage</title>
 </head>
 <body>
-    <header>
+    <header id="home">
         <img class="logo" src="img/image 1.svg" alt="">
         <ul class="informacoes">
             <li><a href="https://www.fiesp.com.br/">FIESP</a></li>
             <li><a href="https://www.sesisp.org.br/">SESI</a></li>
             <li><a href="https://www.sp.senai.br/">SENAI</a></li>
-            <li><a href=""><img src="img/twitter 1.png" alt=""></a></li>
-            <li><a href=""><img src="img/linkedin 1.png" alt=""></a></li>
-            <li><a href=""><img src="img/facebook 1.png" alt=""></a></li>
-            <li><a href=""><img src="img/youtube (1) 1.png" alt=""></a></li>
+            <li><a href="https://twitter.com/senaijandira"><img src="img/twitter 1.png" alt=""></a></li>
+            <li><a href="https://www.linkedin.com/school/senai-jandira/"><img src="img/linkedin 1.png" alt=""></a></li>
+            <li><a href="https://pt-br.facebook.com/senaijandira/"><img src="img/facebook 1.png" alt=""></a></li>
+            <li><a href="https://www.youtube.com/channel/UCQTDY9m19yZ9aoUWFpxmfIw"><img src="img/youtube (1) 1.png" alt=""></a></li>
         </ul>
         <h1>BIBLIOTECA</h1>
         <ul class="atalhos">
-            <li><a href="">HOME</a></li>
-            <li><a href="">LIVROS</a></li>
-            <li><a href="">EVENTOS</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#livros">LIVROS</a></li>
+            <li><a href="#eventos">EVENTOS</a></li>
             <li><a href="">SOBRE</a></li>
         </ul>
     </header>
@@ -37,13 +37,13 @@
         <h2 class="subTitulo">REDE DE LEITORES!</h2>
         </section>
         <section class="segunda">
-            <h1>EVENTOS</h1>
+            <h1 id="eventos">EVENTOS</h1>
         </section>
         <section class="terceira">
 
         </section>
         <section class="quarta">
-            <h1>COLEÇÃO</h1>
+            <h1 id="livros">COLEÇÃO</h1>
             <ul>
                 <li>
                     <a href="">LIVROS TÉCNICOS <img src="img/icon.png" alt=""></a>
