--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
         </section>
         <section class="segunda">
             <h1 id="eventos">EVENTOS</h1>
+            
         </section>
         <section class="terceira">
-
+                <div>
+                <img src="img/meses.png" alt="">
+                <img src="img/trocaLivros.png" alt="">
+                <img src="img/formatura.png" alt="">
+                <img src="img/aniversario.png" alt="">
+                </div>
+                
         </section>
         <section class="quarta">
             <h1 id="livros">COLEÇÃO</h1>
